--- a/Jupyter_Notebook.ipynb
+++ b/Jupyter_Notebook.ipynb
@@ -1,2 +1,95 @@
-# Display the output
-print("New Jupyter file")
+{
+  "metadata": {
+    "kernelspec": {
+      "name": "python",
+      "display_name": "Pyolite",
+      "language": "python"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "python",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8"
+    }
+  },
+  "nbformat_minor": 4,
+  "nbformat": 4,
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "source": "<center>\n    <img src=\"https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/Logos/organization_logo/organization_logo.png\" width=\"300\" alt=\"cognitiveclass.ai logo\"  />\n</center>\n",
+      "metadata": {}
+    },
+    {
+      "cell_type": "markdown",
+      "source": "#### Add your code below following the instructions given in the course\n",
+      "metadata": {}
+    },
+    {
+      "cell_type": "markdown",
+      "source": "# My Jupyter Notebook on IBM Watson Studio ",
+      "metadata": {}
+    },
+    {
+      "cell_type": "markdown",
+      "source": "**Monyetta Hamilton**\nDesired Occupation is Data Analyst",
+      "metadata": {}
+    },
+    {
+      "cell_type": "markdown",
+      "source": "_I am interested in data science because I have always been interested in research. Being a Mental Health Advocate I want to work for a Mental Health Facility to analyis data to help solve pressing mental issues._",
+      "metadata": {}
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### Basic Math",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": "1+1+1",
+      "metadata": {
+        "trusted": true
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "execution_count": 3,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "3"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "![Cute Puppy]https://i.natgeofe.com/k/559a884a-41d7-4731-b940-96f4cf2c8831/puppy-life-book-5_2x1.jpg",
+      "metadata": {}
+    },
+    {
+      "cell_type": "markdown",
+      "source": ">Mental Health...Is not a Destination, but a Process. It's about how you drive, Not where your going. *Noam Shpancer, PHD*",
+      "metadata": {}
+    },
+    {
+      "cell_type": "markdown",
+      "source": "[This is a Link to Psychology Today](https://www.psychologytoday.com/)",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": "",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
+}
